# drago

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: cli-build.yaml
client/: Cargo.toml  README.md  design-doc.md
client/etc/drago/: app.conf
client/src/: api.rs  config.rs  daemon.rs  main.rs  processes.rs
site/: .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
site/drizzle/meta/: 0000_snapshot.json  _journal.json
site/src/: hooks.server.ts
site/src/components/: ApiKeysTab.svelte  Docs.svelte  DomainsTab.svelte  Header.svelte  OtpInput.svelte  SettingsTab.svelte
site/src/lib/: types.ts
site/src/lib/auth/: auth-schema.ts  auth.ts  authClient.ts
site/src/lib/server/db/: appSchema.ts  authSchema.ts  index.ts  schema.ts
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/(auth)/auth/: +page.server.ts  +page.svelte
site/src/routes/(dashboard)/dashboard/: +page.server.ts  +page.svelte
site/src/routes/(device)/device/: +page.server.ts  +page.svelte
site/src/routes/(device)/device/approve/: +page.server.ts  +page.svelte
site/src/routes/docs/: +page.svelte
site/static/: install.sh  robots.txt
src/: main.rs
src/db/: mod.rs  models.rs  schema.rs
src/encryption/: mod.rs
src/lib/: auth.rs  encryption.rs  mod.rs  types.rs
src/lib/utils/: mod.rs
