[package]
name = "drago-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.2.0", features = ["mysql", "chrono"] }
# build libmysqlclient as part of the build process
# uncomment this line if you run into setup issues
mysqlclient-sys = { version = "0.4", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4.42"
