[package]
name = "drago-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.2.0", features = ["mysql", "chrono"] }
# build libmysqlclient as part of the build process
# uncomment this line if you run into setup issues
mysqlclient-sys = { version = "0.4", features = ["bundled"] }
dotenvy = "0.15"
chrono = {version = "0.4.42", features=["serde"]}
uuid = {version = "1.18.1", features=["v7"]}
rand = "0.9.2"
base64 = "0.22.1"
once_cell = "1.21.3"
aes-gcm = "0.10.3"
hex = "0.4.3"
anyhow = "1.0.100"
tower-http = {version="0.6.6", features=["cors"]}
