[package]
name = "drago"
version = "0.1.0"
edition = "2024"

[dependencies]
daemonize = "0.5.0"
reqwest = {version = "0.12.24",  default-features = false,  features = ["blocking", "json", "rustls-tls"]}
serde_json = "1.0.145"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
directories = "5"
chrono = { version = "0.4.42", features = ["serde"] }
rpassword = "7.4.0"
libc = "0.2.178"
dirs = "6.0.0"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # better optimization
panic = "abort"     # removes panic unwinding code
strip = true        # removes debug symbols
